# rbr-sync

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/: dependabot.yaml  release-drafter.yaml  release-drafter.yml
.github/workflows/: auto-approve.yaml  auto-merge.yaml  ci.yaml  release-drafter.yaml  release-drafter.yml  release.yaml
rbr-sync-lib/: Cargo.toml
rbr-sync-lib/src/: lib.rs
src/: main.rs  widgets.rs
