[package]
name = "rbr-sync"
version = "0.0.0-git"
edition = "2021"
build = "build.rs"

[workspace]

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "persistence",
    "default_fonts",
    "wgpu",
    "glow",
    "wayland",
    "x11",
] }
egui = { version = "0.32.0", default-features = false }
egui-notify = "0.17.0"
egui_extras = "0.29.1"
rbr-sync-lib = { path = "rbr-sync-lib" }
rust-ini = "0.21.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }

[build-dependencies]
built = "0.7"
