[package]
name = "rbr-sync"
version = "0.0.0-git"
edition = "2021"
build = "build.rs"

[workspace]

[dependencies]
eframe = { version = "0.32.3", default-features = false, features = [
    "persistence",
    "default_fonts",
    "wgpu",
    "glow",
    "wayland",
    "x11",
] }
egui = { version = "0.33.0", default-features = false }
egui-notify = "0.20.0"
egui_extras = "0.32.3"
wgpu = "25" # temporary fix for egui 0.32.x
rbr-sync-lib = { path = "rbr-sync-lib" }
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
built = "0.8.0"
