[package]
name = "rbr-sync-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"
