[package]
name = "rbr-sync-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
